# katiba

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
deepseek-ocr-output/page_001/: result.mmd
deepseek-ocr-output/page_002/: result.mmd
deepseek-ocr-output/page_003/: result.mmd
deepseek-ocr-output/page_004/: result.mmd
deepseek-ocr-output/page_005/: result.mmd
deepseek-ocr-output/page_006/: result.mmd
deepseek-ocr-output/page_007/: result.mmd
deepseek-ocr-output/page_008/: result.mmd
deepseek-ocr-output/page_009/: result.mmd
deepseek-ocr-output/page_010/: result.mmd
deepseek-ocr-output/page_011/: result.mmd
deepseek-ocr-output/page_012/: result.mmd
deepseek-ocr-output/page_013/: result.mmd
deepseek-ocr-output/page_014/: result.mmd
deepseek-ocr-output/page_015/: result.mmd
deepseek-ocr-output/page_016/: result.mmd
deepseek-ocr-output/page_017/: result.mmd
deepseek-ocr-output/page_018/: result.mmd
deepseek-ocr-output/page_019/: result.mmd
deepseek-ocr-output/page_020/: result.mmd
deepseek-ocr-output/page_021/: result.mmd
deepseek-ocr-output/page_022/: result.mmd
deepseek-ocr-output/page_023/: result.mmd
deepseek-ocr-output/page_024/: result.mmd
deepseek-ocr-output/page_025/: result.mmd
deepseek-ocr-output/page_026/: result.mmd
deepseek-ocr-output/page_027/: result.mmd
output/: boundaries.jsonl  boundaries_clean.json  boundaries_visualization.html  constitution_combined.mmd  constitution_skeleton.json  constitution_structure.json  page_index.json
output/chapters/: chapter_01.json  (+17 more)
(+177 files in other folders)
