[project]
name = "katiba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langextract[openai]>=1.5.0",
    "langextract-openrouter>=0.1.1",
    "pydantic-settings>=2.14.2",
]
[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"
